--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,13 @@
     overflow: hidden;
     border-bottom: 2px solid #cccccc;
     padding-top: 3%;
+    margin-bottom: 20px;
 }
 .topnav span{
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: white;
     background: #4aaaa5;
     padding: 0px 15px 0px 15px;
-    margin-left: 15%;
     font-size: 30px;
 }
 /* Style the links inside the navigation bar */
@@ -22,7 +22,6 @@
     text-decoration: none;
     font-size: 17px;
 }
-
 /* Add a color to the active/current link */
 .topnav a.active {
     background-color: #4CAF50;
@@ -34,10 +33,8 @@
 #about{
     border-right: 1px solid gray;
 }
-#contact{
-    margin-right: 20%;
-}
 #header, h1, h2, h3, h4, h5, h6{
+    font-family: 'Georgia', Times, Times New Roman, serif;
     color: #4aaaa5;
 }
 .contentHeader{
@@ -53,14 +50,15 @@ body{
     background: #ffffff;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-image: url("../images/tree_bark.png");
 }
 .contentWrapper{
-    margin-top: 40px;
-    margin-left: 25%;
+    margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
     width: 960px;
     border: 2px solid #dddddd;
+    background: #ffffff;
 }
 #footer{
     position: fixed;
@@ -71,4 +69,22 @@ body{
     background-color: #666666;
     color: white;
     text-align: center;
+}
+.nameField, .emailField, .messageField{
+    width: 100%;
+    margin-bottom: 10px;
+}
+.messageField{
+    padding-bottom: 100px;
+}
+.button{
+    background: #4aaaa5;
+    color: #fff;
+    padding: 10px;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+.navContent{
+    margin: 0 auto;
+    width: 960px;
 }
