--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ body{
 .nameField, .emailField, .messageField{
     width: 100%;
     margin-bottom: 10px;
+    padding: 5px;
 }
 .messageField{
     padding-bottom: 100px;
