--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,16 @@
 a{
     text-decoration: none;
 }
+body{
+    background: #ffffff;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-image: url("../images/tree_bark.png");
+    margin-bottom: 80px;
+}
+.mainBody{
+    padding-bottom: 15px;
+}
 .navContent{
     margin: 0 auto;
     width: 960px;
@@ -44,6 +54,10 @@ a{
     color: #4aaaa5;
 }
 .contentHeader{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 24px;
+    font-weight: bold;
     padding-bottom: 10px;
     border-bottom: 2px solid #cccccc;
 }
@@ -52,13 +66,7 @@ a{
     width: 200px;
     margin: 0px 10px 0px 0px;
 }
-body{
-    background: #ffffff;
-    color: #777777;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    background-image: url("../images/tree_bark.png");
-    margin-bottom: 80px;
-}
+
 .contentWrapper{
     margin: 0 auto;
     padding-left: 15px;
@@ -76,6 +84,7 @@ body{
     background-color: #666666;
     color: white;
     text-align: center;
+    border-top: 3px solid green;
 }
 .nameField, .emailField, .messageField{
     width: 100%;
