--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,15 @@ a{
     width: 960px;
 }
 .topnav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
     background-color: #fff;
     overflow: hidden;
     border-bottom: 2px solid #cccccc;
-    padding-top: 3%;
-    margin-bottom: 20px;
+    padding-top: 2%;
+    z-index: 1000;
 }
 .topnav span{
     font-family: 'Georgia', Times, Times New Roman, serif;
@@ -60,7 +64,9 @@ body{
     margin-bottom: 80px;
 }
 .contentWrapper{
-    margin: 0 auto;
+    margin-top: 8%;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
     width: 960px;
