--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Roboto');
+
 a{
     text-decoration: none;
 }
@@ -17,7 +19,7 @@ a{
     z-index: 1000;
 }
 .topnav span{
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', 'Times', 'Times New Roman', 'Roboto', serif;
     color: white;
     background: #4aaaa5;
     padding: 0px 15px 0px 15px;
@@ -43,7 +45,7 @@ a{
     border-right: 1px solid gray;
 }
 #header, h1, h2, h3, h4, h5, h6{
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', Times, Times New Roman, 'Montserrat', serif;
     color: #4aaaa5;
 }
 .contentHeader{
@@ -58,7 +60,7 @@ a{
 body{
     background: #ffffff;
     color: #777777;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'Indie Flower', 'sans-serif';
     background-image: url("../images/tree_bark.png");
     margin-bottom: 80px;
     line-height: 1.5;
