--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ a{
     background-color: #fff;
     overflow: hidden;
     border-bottom: 2px solid #cccccc;
-    padding-top: 2%;
+    padding-top: 3%;
     z-index: 1000;
 }
 .topnav span{
@@ -39,6 +39,7 @@ a{
 }
 /* Add a color to the active/current link */
 #portfolio{
+
     border-right: 1px solid gray;
 }
 #about{
@@ -49,8 +50,15 @@ a{
     color: #4aaaa5;
 }
 .contentHeader{
-    padding-bottom: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 5px;
     border-bottom: 2px solid #cccccc;
+}
+.mainBody{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .mainBody img{
     float: left;
@@ -63,7 +71,6 @@ body{
     font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'Indie Flower', 'sans-serif';
     background-image: url("../images/tree_bark.png");
     margin-bottom: 80px;
-    line-height: 1.5;
 }
 .contentWrapper{
     margin-top: 8%;
@@ -74,6 +81,7 @@ body{
     width: 960px;
     border: 2px solid #dddddd;
     background: #ffffff;
+    line-height: 1.5;
 }
 #footer{
     position: fixed;
@@ -84,11 +92,13 @@ body{
     background-color: #666666;
     color: white;
     text-align: center;
+    border-top: 5px solid #4aaaa5;
 }
 .nameField, .emailField, .messageField{
     width: 100%;
     margin-bottom: 10px;
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 .messageField{
     padding-bottom: 100px;
@@ -101,6 +111,8 @@ body{
     margin-bottom: 5px;
 }
 .portfolio{
+    padding: 0;
+    margin-top: 30px;
     list-style-type: none;
     text-align: center;
 }
