--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,6 @@
     background-color: transparent !important;
     border-color: white !important;
 }
-.dropshadow {
-    text-shadow: 1px 1px rgba(0, 0, 0)
-}
 .profile {
     width: 200px;
     height: 200px;
@@ -24,4 +21,7 @@
 }
 .social-link {
     font-size: 5vh;
+}
+.btn {
+    box-shadow: none !important;
 }
